# AgarOSS

./: .gitignore  AgarOSS.sln  AgarOSS.vcxproj  CMakeLists.txt  Changelog.md  Game.cpp  Game.hpp  GameServer.cpp  GameServer.h  OgarCpp.sln  OgarCpp.vcxproj  Packet.cpp  Packet.h  PacketHandler.cpp  PacketHandler.h  Player.cpp  Player.h  Player.hpp  README.md  Server.cpp  Server.hpp  Settings.cpp  Settings.h  Settings.ini  Settings.json  Utils.h  compile.bat  compile.sh  main.cpp
Connection/: PacketHandler.cpp  PacketHandler.hpp  Server.cpp  Server.hpp
Entities/: Ejected.cpp  Ejected.hpp  Entities.cpp  Entities.hpp  Entity.cpp  Entity.hpp  Food.cpp  Food.hpp  Map.cpp  Map.hpp  MotherCell.cpp  MotherCell.hpp  PlayerCell.cpp  PlayerCell.hpp  Virus.cpp  Virus.hpp
Entity/: Entity.cpp  Entity.h  EntityHandler.cpp  EntityHandler.h
Game/: Game.cpp  Game.hpp  Map.cpp  Map.hpp
Modules/: BinaryRW.cpp  BinaryRW.h  Buffer.cpp  Buffer.hpp  Commands.cpp  Commands.hpp  Logger.cpp  Logger.h  Logger.hpp  QuadTree.cpp  QuadTree.hpp  Utils.cpp  Utils.h  Utils.hpp  Vec2.cpp  Vec2.hpp  Vector2.cpp  Vector2.hpp  json.hpp
Packets/: AddNode.hpp  BanPlayer.hpp  ClearAll.hpp  Compressed.hpp  DKS2.hpp  Login.hpp  Logout.hpp  MobileData.hpp  Packet.hpp  PacketHandler.cpp  PacketHandler.hpp  Ping.hpp  RemoveArrow.hpp  RequestCaptcha.hpp  RequestClientUpdate.hpp  SetBorder.hpp  ShowArrow.hpp  UpdateLeaderboardList.cpp  UpdateLeaderboardList.hpp  UpdateLeaderboardRGB.hpp  UpdateNodes.cpp  UpdateNodes.hpp  UpdateViewport.hpp
Player/: Minion.cpp  Minion.hpp  Player.cpp  Player.hpp  (+2 more)
(+39 files in other folders)
